Fix terminal fallback and Windows demo launchers
- Ink: add terminal size fallback for dumb terminals
- Ink: fall back to simple output when raw mode is unavailable
- Ink: make terminal redraw clear and rewrite lines more safely
- Add run-demo.cmd for Windows cmd with JDK 21 and UTF-8 setup
- Add run-demo.ps1 for PowerShell with script-root cd and UTF-8 setup
- Avoid inheriting incompatible JAVA_HOME values during demo startup

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>